Extended CheckUtility and other things - Saving and checking for previous attackers now - Correctly recognizing when a threat is resolved - Added more loggers - Setting a piece's position to null signals that the piece is no longer on the board - Correctly updating turns now